--- a/Calculator/ResetTableViewCell.xib
+++ b/Calculator/ResetTableViewCell.xib
@@ -33,6 +33,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="resetButton" destination="KOI-Rq-3oO" id="qTp-1n-nKd"/>
+            </connections>
             <point key="canvasLocation" x="139" y="131"/>
         </tableViewCell>
     </objects>
