--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -21,22 +21,22 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Zt-lK-JPn">
-                                <rect key="frame" x="0.0" y="44" width="414" height="179"/>
+                                <rect key="frame" x="5" y="44" width="404" height="179"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hb-g8-g0T">
-                                        <rect key="frame" x="0.0" y="179" width="414" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="179" width="404" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="39"/>
-                                        <color key="textColor" red="0.28924823659999999" green="0.2878650525" blue="0.29886068760000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="textColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tMA-t8-EVS">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="27.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tMA-t8-EVS">
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                        <color key="textColor" systemColor="systemTealColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="tMA-t8-EVS" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="top" id="98P-kA-VLz"/>
                                     <constraint firstItem="tMA-t8-EVS" firstAttribute="leading" secondItem="3Zt-lK-JPn" secondAttribute="leading" id="Vln-ww-yBQ"/>
@@ -52,17 +52,17 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="14r-2l-MXz" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="bottom" id="E9L-oX-3CA"/>
-                            <constraint firstItem="3Zt-lK-JPn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GlA-7w-nBp"/>
+                            <constraint firstItem="3Zt-lK-JPn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="GlA-7w-nBp"/>
                             <constraint firstItem="14r-2l-MXz" firstAttribute="leading" secondItem="xfm-LH-jA5" secondAttribute="trailing" id="Gmz-6R-00b"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="14r-2l-MXz" secondAttribute="trailing" id="PZD-1m-d4u"/>
                             <constraint firstItem="xfm-LH-jA5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.7" id="Vke-CJ-1Yu"/>
                             <constraint firstItem="xfm-LH-jA5" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="bottom" id="dxm-IW-d3o"/>
                             <constraint firstItem="3Zt-lK-JPn" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.2" id="g68-bX-r4i"/>
                             <constraint firstItem="3Zt-lK-JPn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jbr-bM-5aL"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Zt-lK-JPn" secondAttribute="trailing" id="lwc-kT-E30"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Zt-lK-JPn" secondAttribute="trailing" constant="5" id="lwc-kT-E30"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xfm-LH-jA5" secondAttribute="bottom" id="tIW-HW-CXa"/>
                             <constraint firstItem="xfm-LH-jA5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uFd-9c-5iZ"/>
                             <constraint firstItem="14r-2l-MXz" firstAttribute="height" secondItem="xfm-LH-jA5" secondAttribute="height" id="yeN-sz-icC"/>
@@ -84,8 +84,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="tertiarySystemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
