--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -16,11 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xfm-LH-jA5">
-                                <rect key="frame" x="0.0" y="223" width="290" height="639"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Zt-lK-JPn">
+                            <view contentMode="scaleToFill" restorationIdentifier="displayView" translatesAutoresizingMaskIntoConstraints="NO" id="3Zt-lK-JPn" userLabel="DiaplayView">
                                 <rect key="frame" x="5" y="44" width="404" height="179"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hb-g8-g0T">
@@ -36,7 +32,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="tMA-t8-EVS" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="top" id="98P-kA-VLz"/>
                                     <constraint firstItem="tMA-t8-EVS" firstAttribute="leading" secondItem="3Zt-lK-JPn" secondAttribute="leading" id="Vln-ww-yBQ"/>
@@ -46,32 +42,27 @@
                                     <constraint firstAttribute="bottom" secondItem="0hb-g8-g0T" secondAttribute="bottom" id="tlA-xA-1Nw"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="14r-2l-MXz">
-                                <rect key="frame" x="290" y="223" width="124" height="639"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KmE-c1-cws" userLabel="ButtonContainerView">
+                                <rect key="frame" x="10" y="233" width="394" height="619"/>
+                                <color key="backgroundColor" red="0.19215686274509802" green="0.19215686274509802" blue="0.19215686274509802" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="14r-2l-MXz" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="bottom" id="E9L-oX-3CA"/>
                             <constraint firstItem="3Zt-lK-JPn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="GlA-7w-nBp"/>
-                            <constraint firstItem="14r-2l-MXz" firstAttribute="leading" secondItem="xfm-LH-jA5" secondAttribute="trailing" id="Gmz-6R-00b"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="14r-2l-MXz" secondAttribute="trailing" id="PZD-1m-d4u"/>
-                            <constraint firstItem="xfm-LH-jA5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.7" id="Vke-CJ-1Yu"/>
-                            <constraint firstItem="xfm-LH-jA5" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="bottom" id="dxm-IW-d3o"/>
+                            <constraint firstItem="KmE-c1-cws" firstAttribute="top" secondItem="3Zt-lK-JPn" secondAttribute="bottom" constant="10" id="M2x-7v-Ytr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KmE-c1-cws" secondAttribute="trailing" constant="10" id="Nax-92-HXV"/>
+                            <constraint firstItem="KmE-c1-cws" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="aK0-cC-reG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KmE-c1-cws" secondAttribute="bottom" constant="10" id="dau-mp-XAB"/>
                             <constraint firstItem="3Zt-lK-JPn" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.2" id="g68-bX-r4i"/>
                             <constraint firstItem="3Zt-lK-JPn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jbr-bM-5aL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Zt-lK-JPn" secondAttribute="trailing" constant="5" id="lwc-kT-E30"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xfm-LH-jA5" secondAttribute="bottom" id="tIW-HW-CXa"/>
-                            <constraint firstItem="xfm-LH-jA5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uFd-9c-5iZ"/>
-                            <constraint firstItem="14r-2l-MXz" firstAttribute="height" secondItem="xfm-LH-jA5" secondAttribute="height" id="yeN-sz-icC"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="numbericButtonTableView" destination="xfm-LH-jA5" id="esT-FY-iQG"/>
+                        <outlet property="buttonContainerView" destination="KmE-c1-cws" id="ekJ-Ik-qJF"/>
                         <outlet property="operatingStringLabel" destination="tMA-t8-EVS" id="E0l-Y8-yZp"/>
-                        <outlet property="operatorButtonTableView" destination="14r-2l-MXz" id="tqt-FJ-KSr"/>
                         <outlet property="resultLabel" destination="0hb-g8-g0T" id="kqy-1x-tHn"/>
                     </connections>
                 </viewController>
@@ -81,9 +72,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="tertiarySystemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
